--- a/src/swy-ui/locale/package.json
+++ b/src/swy-ui/locale/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@element-plus/locale",
+  "name": "@swy-ui/locale",
   "version": "0.0.5",
   "description": "Element Plus locale",
   "license": "MIT",
